--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,9 @@
     font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
     font-weight: 400;
-
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     color-scheme: light dark;
     color: rgba(255, 255, 255, 0.87);
     background-color: #242424;
@@ -11,6 +13,13 @@
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    --bg-color: #FFFFFF;
+    --dark: #000000;
+    --primary-shadow: 4px 4px 8px 0px rgba(81, 164, 229, 0.2);
+    --primary: rgba(212, 237, 253, 0.2)
+}
+html{
+    font-size: 10px;
 }
 
 a {
