--- a/src/index.css
+++ b/src/index.css
@@ -1,31 +1,163 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+
+/*fontsize and fonts*/
 :root {
     font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
     font-weight: 400;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+
+    --font-roboto-mono: 'Roboto Mono', monospace;
+    --font-size-xs: 12px;
+    --font-size-sm: 14px;
+    --font-size-base: 16px;
+    --font-size-md: 18px;
+    --font-size-lg: 20px;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -moz-osx-font-smoothing: grayscale;
+
+    /* Headings */
+    --font-size-h6: 16px;
+    --font-size-h5: 18px;
+    --font-size-h4: 20px;
+    --font-size-h3: 24px;
+    --font-size-h2: 32px;
+    --font-size-h1: 40px;
+
+    /* Display / Hero */
+    --font-size-display-sm: 48px;
+    --font-size-display-md: 56px;
+    --font-size-display-lg: 64px;
+    --font-size-display-xl: 72px;
+}
+ /*main colors */
+:root {
     color-scheme: light dark;
     color: rgba(255, 255, 255, 0.87);
     background-color: #242424;
 
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+
     --bg-color: #FFFFFF;
-    --dark: #000000;
-    --primary-shadow: 4px 4px 8px 0px rgba(81, 164, 229, 0.2);
-    --primary: rgba(212, 237, 253, 0.2)
+    --dark: #484646;
+    --shadow: 4px 4px 8px 0px rgba(81, 164, 229, 0.2);
+    --primary: rgba(212, 237, 253, 0.2);
+    --color-neutral-25: #fcfcfd;
+    --color-neutral-50: #f9fafb;
+    --color-neutral-100: #f2f4f7;
+    --color-neutral-200: #e4e7ec;
+    --color-neutral-300: #d0d5dd;
+    --color-neutral-400: #98a2b3;
+    --color-neutral-500: #667085;
+    --color-neutral-600: #475467;
+    --color-neutral-700: #344054;
+    --color-neutral-800: #1d2939;
+    --color-neutral-900: #101828;
+    --color-primary-25: #fbfbff;
+    --color-primary-50: #f6f6fe;
+    --color-primary-100: #ececfd;
+    --color-primary-200: #dedeff;
+    --color-primary-300: #ccccfa;
+    --color-primary-400: #b7b7ff;
+    --color-primary-500: #a0a0f5;
+    --color-primary-600: #8080f2;
+    --color-primary-700: #6358d4;
+    --color-primary-800: #4b32c3;
+    --color-primary-900: #341bab;
+    --color-warning-25: #fffcf5;
+    --color-warning-50: #fffaeb;
+    --color-warning-100: #fef0c7;
+    --color-warning-200: #fedf89;
+    --color-warning-300: #fec84b;
+    --color-warning-400: #fdb022;
+    --color-warning-500: #f79009;
+    --color-warning-600: #dc6803;
+    --color-warning-700: #b54708;
+    --color-warning-800: #93370d;
+    --color-warning-900: #7a2e0e;
+    --color-success-25: #f6fef9;
+    --color-success-50: #ecfdf3;
+    --color-success-100: #d1fadf;
+    --color-success-200: #a6f4c5;
+    --color-success-300: #6ce9a6;
+    --color-success-400: #32d583;
+    --color-success-500: #12b76a;
+    --color-success-600: #039855;
+    --color-success-700: #027a48;
+    --color-success-800: #05603a;
+    --color-success-900: #054f31;
+    --color-rose-25: #fff5f6;
+    --color-rose-50: #fff1f3;
+    --color-rose-100: #ffe4e8;
+    --color-rose-200: #fecdd6;
+    --color-rose-300: #fea3b4;
+    --color-rose-400: #fd6f8e;
+    --color-rose-500: #f63d68;
+    --color-rose-600: #e31b54;
+    --color-rose-700: #c01048;
+    --color-rose-800: #a11043;
+    --color-rose-900: #89123e;
 }
+/*named colors, usefull */
+:root{
+
+    --primary-button-background-color: var(--color-primary-800);
+    --primary-button-hover-color: var(--color-primary-900);
+    --primary-button-text-color: #fff;
+    --secondary-button-background-color: var(--color-primary-50);
+    --secondary-button-hover-color: var(--color-primary-100);
+    --secondary-button-text-color: var(--color-brand);
+    --ghost-button-background-color: var(--color-primary-50);
+    --ghost-button-text-color: var(--color-brand);
+    --color-brand: var(--color-primary-800);
+    --body-background-color: #fff;
+    --body-text-color: var(--color-neutral-500);
+    --code-comments-color: var(--color-neutral-500);
+    --headings-color: var(--color-neutral-900);
+    --border-color: var(--color-neutral-300);
+    --divider-color: var(--color-neutral-200);
+    --icon-color: var(--color-neutral-400);
+    --dark-icon-color: var(--color-neutral-500);
+    --link-color: var(--color-primary-800);
+    --lighter-background-color: var(--color-neutral-100);
+    --lightest-background-color: var(--color-neutral-50);
+    --docs-lightest-background-color: var(--color-primary-50);
+    --hero-background-color: var(--color-neutral-25);
+    --footer-background-color: var(--color-neutral-25);
+    --outline-color: var(--color-brand);
+    --img-background-color: #fff;
+    --code-text-color: var(--color-neutral-900);
+    --logo-color: var(--color-primary-800);
+    --logo-center-color: var(--color-primary-600);
+    --alert-tip-heading-color: var(--color-success-700);
+    --alert-tip-color: var(--color-success-600);
+    --alert-tip-background-color: var(--color-success-25);
+    --alert-important-heading-color: var(--color-warning-700);
+    --alert-important-color: var(--color-warning-600);
+    --alert-important-background-color: var(--color-warning-25);
+    --alert-warning-heading-color: var(--color-rose-700);
+    --alert-warning-color: var(--color-rose-600);
+    --alert-warning-background-color: var(--color-rose-25);
+    --rule-status-background-color: var(--color-rose-50);
+}
+
+
+/*content sizes*/
+:root {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    --max-content-width: 1280px;
+}
+
+
 html{
     font-size: 10px;
 }
 
 a {
-    font-weight: 500;
-    color: #646cff;
-    text-decoration: inherit;
+    font-weight: bold;
+    font-size: var(--font-size-md);
+    cursor: pointer;
 }
 a:hover {
     color: #535bf2;
@@ -33,34 +165,14 @@ a:hover {
 
 body {
     margin: 0;
-    display: flex;
-    place-items: center;
     min-width: 320px;
     min-height: 100vh;
+    max-width: 1440px;
 }
 
 h1 {
     font-size: 3.2em;
     line-height: 1.1;
-}
-
-button {
-    border-radius: 8px;
-    border: 1px solid transparent;
-    padding: 0.6em 1.2em;
-    font-size: 1em;
-    font-weight: 500;
-    font-family: inherit;
-    background-color: #1a1a1a;
-    cursor: pointer;
-    transition: border-color 0.25s;
-}
-button:hover {
-    border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-    outline: 4px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
@@ -71,7 +183,50 @@ button:focus-visible {
     a:hover {
         color: #747bff;
     }
-    button {
-        background-color: #f9f9f9;
+}
+
+@media (max-width: 1024px) {
+    :root {
+        /* Планшеты */
+        --font-size-xs: 11px;
+        --font-size-sm: 13px;
+        --font-size-base: 15px;
+        --font-size-md: 16px;
+        --font-size-lg: 18px;
+
+        --font-size-h6: 15px;
+        --font-size-h5: 16px;
+        --font-size-h4: 18px;
+        --font-size-h3: 20px;
+        --font-size-h2: 26px;
+        --font-size-h1: 32px;
+
+        --font-size-display-sm: 40px;
+        --font-size-display-md: 48px;
+        --font-size-display-lg: 56px;
+        --font-size-display-xl: 64px;
+    }
+}
+
+@media (max-width: 768px) {
+    :root {
+        /* Мобильные */
+        --font-size-xs: 10px;
+        --font-size-sm: 12px;
+        --font-size-base: 14px;
+        --font-size-md: 15px;
+        --font-size-lg: 16px;
+
+        --font-size-h6: 14px;
+        --font-size-h5: 15px;
+        --font-size-h4: 16px;
+        --font-size-h3: 18px;
+        --font-size-h2: 22px;
+        --font-size-h1: 28px;
+
+        --font-size-display-sm: 32px;
+        --font-size-display-md: 40px;
+        --font-size-display-lg: 48px;
+        --font-size-display-xl: 56px;
     }
 }
