--- a/src/component/upload/Upload.module.css
+++ b/src/component/upload/Upload.module.css
@@ -6,3 +6,73 @@
     justify-content: center;
     padding-top: 10rem;
 }
+.box{
+    margin: 2rem;
+    max-width: 50rem;
+    max-height: 50rem;
+    width: 100%;
+    height: 100%;
+    min-width: 300px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background-color: var(--bg-color);
+    padding: clamp(1rem, 5vw, 2rem);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 0.6rem;
+}
+.upload{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2rem;
+    gap: 3rem;
+    box-sizing: border-box;
+    cursor: pointer;
+}
+.uploadText{
+    font-size: var(--font-size-h3);
+    font-family: var(--font-roboto-mono);
+    text-align: center;
+    text-decoration: none;
+    color: var(--link-color);
+    font-weight: 600;
+}
+.selectedFile{
+    width: 90%;
+    padding: 1rem 2rem;
+    background-color: rgba(75, 50, 195, 0.09);
+    border-radius: 0.6rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    user-select: none;
+    box-sizing: border-box;
+}
+.selectedFile{
+    text-align: center;
+    font-size: var(--font-size-base);
+    font-family: var(--font-roboto-mono);
+}
+.selectedFile label{
+    display: flex;
+    align-items: center;
+}
+
+.dragActive {
+    outline: 2px dashed var(--primary-button-background-color);
+    background-color: rgba(0, 128, 255, 0.05);
+}
+
+.transparentButton{
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+.transparentButton:active svg{
+    width: 3rem;
+    height: 3rem;
+}
