--- a/src/component/upload/Upload.module.css
+++ b/src/component/upload/Upload.module.css
@@ -6,21 +6,7 @@
     justify-content: center;
     padding-top: 10rem;
 }
-.box{
-    margin: 2rem;
-    max-width: 50rem;
-    max-height: 50rem;
-    width: 100%;
-    height: 100%;
-    min-width: 300px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    background-color: var(--bg-color);
-    padding: clamp(1rem, 5vw, 2rem);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    border-radius: 0.6rem;
-}
+
 .upload{
     display: flex;
     flex-direction: column;
@@ -51,6 +37,9 @@
     user-select: none;
     box-sizing: border-box;
 }
+.errorMessage{
+    color: var(--alert-warning-color);
+}
 .selectedFile{
     text-align: center;
     font-size: var(--font-size-base);
@@ -61,18 +50,16 @@
     align-items: center;
 }
 
-.dragActive {
-    outline: 2px dashed var(--primary-button-background-color);
-    background-color: rgba(0, 128, 255, 0.05);
-}
-
 .transparentButton{
     background-color: transparent;
     border: none;
     cursor: pointer;
+
+}
+.transparentButton svg{
+    transition: scale 80ms ease-in;
 }
 
 .transparentButton:active svg{
-    width: 3rem;
-    height: 3rem;
+    scale: 0.9;
 }
