--- a/src/index.css
+++ b/src/index.css
@@ -172,6 +172,7 @@ body {
     min-width: 320px;
     min-height: 100vh;
     max-width: 1440px;
+    font-family: var(--font-roboto-mono), sans-serif;
 }
 
 h1 {
