--- a/src/component/boxContainer/BoxContainer.module.css
+++ b/src/component/boxContainer/BoxContainer.module.css
@@ -1,12 +1,12 @@
-.box{
+.box {
     margin: 2rem;
     max-width: 50rem;
     max-height: 50rem;
     width: 100%;
     height: 100%;
     min-width: 300px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    background-color: var(--bg-color);
+    box-shadow: var(--shadow);
+    background-color: var(--hero-background-color);
     padding: clamp(1rem, 5vw, 2rem);
     display: flex;
     flex-direction: column;
@@ -18,3 +18,5 @@
     outline: 2px dashed var(--primary-button-background-color);
     background-color: rgba(0, 128, 255, 0.05);
 }
+
+/*0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)*/
