--- a/src/component/upload/Upload.module.css
+++ b/src/component/upload/Upload.module.css
@@ -1,4 +1,4 @@
-.container{
+.container {
     width: 100vw;
     height: auto;
     display: flex;
@@ -7,7 +7,7 @@
     padding-top: 10rem;
 }
 
-.upload{
+.upload {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,15 +17,15 @@
     box-sizing: border-box;
     cursor: pointer;
 }
-.uploadText{
+.uploadText {
     font-size: var(--font-size-h3);
-    font-family: var(--font-roboto-mono);
+    font-family: var(--font-roboto-mono), serif;
     text-align: center;
     text-decoration: none;
-    color: var(--link-color);
+    color: var(--body-text-color);
     font-weight: 600;
 }
-.selectedFile{
+.selectedFile {
     width: 90%;
     padding: 1rem 2rem;
     background-color: rgba(75, 50, 195, 0.09);
@@ -37,29 +37,29 @@
     user-select: none;
     box-sizing: border-box;
 }
-.errorMessage{
+.errorMessage {
     color: var(--alert-warning-color);
 }
-.selectedFile{
+.selectedFile {
     text-align: center;
     font-size: var(--font-size-base);
-    font-family: var(--font-roboto-mono);
+    font-family: var(--font-roboto-mono), serif;
 }
-.selectedFile label{
+.selectedFile label {
     display: flex;
     align-items: center;
 }
 
-.transparentButton{
+.transparentButton {
     background-color: transparent;
     border: none;
     cursor: pointer;
-
 }
-.transparentButton svg{
+.transparentButton svg * {
     transition: scale 80ms ease-in;
+    fill: var(--body-text-color);
 }
 
-.transparentButton:active svg{
+.transparentButton:active svg {
     scale: 0.9;
 }
