--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+@import "./reset.css";
 
 /*fontsize and fonts*/
 :root {
@@ -138,85 +139,12 @@
     --rule-status-background-color: var(--color-rose-50);
 }
 
-html[data-theme='light'] {
-    --logo-center-opacity: var(--opacity-100);
-}
-html[data-theme='light'] {
-    --sponsor-img-border-radius: 0;
-    --sponsor-backers-img-border-radius: 50%;
-    --github-logo-filter: invert(0);
-}
-html[data-theme='light'] {
-    --body-background-color: #fff;
-    --body-text-color: var(--color-neutral-500);
-    --code-comments-color: var(--color-neutral-500);
-    --headings-color: var(--color-neutral-900);
-    --border-color: var(--color-neutral-300);
-    --divider-color: var(--color-neutral-200);
-    --icon-color: var(--color-neutral-400);
-    --dark-icon-color: var(--color-neutral-500);
-    --link-color: var(--color-primary-800);
-    --lighter-background-color: var(--color-neutral-100);
-    --lightest-background-color: var(--color-neutral-50);
-    --docs-lightest-background-color: var(--color-primary-50);
-    --hero-background-color: var(--color-neutral-25);
-    --footer-background-color: var(--color-neutral-25);
-    --outline-color: var(--color-brand);
-    --editor-string-color: var(--color-warning-800);
-    --editor-comment-color: var(--color-success-700);
-    --editor-keyword-color: var(--color-primary-900);
-    --editor-name-color: var(--color-primary-700);
-    --editor-bracket-match-outline-color: var(--color-neutral-200);
-    --editor-bracket-match-background-color: var(--color-neutral-100);
-    --editor-bracket-match-color: none;
-    --logo-color: var(--color-primary-800);
-    --logo-center-color: var(--color-primary-600);
-    --label-text-color: var(--color-neutral-700);
-    --code-text-color: var(--color-neutral-900);
-}
 .translated-ltr {
     direction: ltr;
     text-align: left;
 }
 
-html[data-theme='dark'] {
-    --logo-center-opacity: var(--opacity-60);
-}
-html[data-theme='dark'] {
-    --sponsor-img-border-radius: var(--border-radius);
-    --sponsor-backers-img-border-radius: var(--border-radius);
-    --github-logo-filter: invert(100%);
-}
-html[data-theme='dark'] {
-    color-scheme: dark;
-    --body-background-color: var(--color-neutral-900);
-    --body-text-color: var(--color-neutral-300);
-    --code-comments-color: var(--color-neutral-400);
-    --headings-color: #fff;
-    --divider-color: var(--color-neutral-600);
-    --border-color: var(--color-neutral-500);
-    --icon-color: var(--body-text-color);
-    --dark-icon-color: #fff;
-    --link-color: var(--color-primary-400);
-    --lighter-background-color: var(--color-neutral-800);
-    --lightest-background-color: var(--color-neutral-800);
-    --docs-lightest-background-color: var(--color-neutral-800);
-    --hero-background-color: var(--color-neutral-800);
-    --footer-background-color: var(--color-neutral-800);
-    --outline-color: #fff;
-    --editor-string-color: var(--color-warning-300);
-    --editor-comment-color: var(--color-success-500);
-    --editor-keyword-color: var(--color-primary-500);
-    --editor-name-color: var(--color-primary-300);
-    --editor-bracket-match-outline-color: var(--color-neutral-600);
-    --editor-bracket-match-background-color: var(--color-neutral-700);
-    --editor-bracket-match-color: var(--color-neutral-25);
-    --logo-color: #fff;
-    --logo-center-color: #fff;
-    --sponsor-background-color: #fff;
-    --label-text-color: var(--color-neutral-100);
-    --code-text-color: var(--color-neutral-100);
-}
+
 @media (prefers-color-scheme: dark) {
     :root {
         --logo-center-opacity: var(--opacity-60);
@@ -236,14 +164,14 @@ html[data-theme='dark'] {
 }
 :root {
     --shadow-lg: 0 12px 16px -4px rgba(16, 24, 40, 0.1), 0 4px 6px -2px rgba(16, 24, 40, 0.05);
-    --shadow-xs: 0 1px 2px rgba(16, 24, 40, 0.05);
+    --shadow-xs: 0 3px 10px rgb(0,0,0,0.2);;
     --border-radius: 0.5rem;
-}
-:root {
-    --opacity-100: 1;
-    --opacity-60: 0.6;
-    --logo-center-opacity: var(--opacity-100);
-}
+}:root {
+     --opacity-100: 1;
+     --opacity-60: 0.6;
+     --logo-center-opacity: var(--opacity-100);
+ }
+
 :root {
     --shadow-lg: 0 12px 16px -4px rgba(16, 24, 40, 0.1), 0 4px 6px -2px rgba(16, 24, 40, 0.05);
     --shadow-xs: 0 1px 2px rgba(16, 24, 40, 0.05);
@@ -469,7 +397,7 @@ html {
 }
 a {
     font-weight: bold;
-    font-size: var(--font-size-md);
+    font-size: var(--font-size-base);
     cursor: pointer;
 }
 a:hover {
