не придумал что написать просто комит перед уходом

--- a/src/widget/setting/Setting.module.css
+++ b/src/widget/setting/Setting.module.css
@@ -39,6 +39,7 @@
     padding: var(--step-0);
     border-radius: var(--border-radius);
     border: 1px solid var(--border-color);
+    font-size: var(--step-1);
 }
 
 .input:focus{
