--- a/src/widget/setting/Setting.module.css
+++ b/src/widget/setting/Setting.module.css
@@ -1,47 +1,13 @@
-
-.container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
-    margin-top: var(--space-m);
+.container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    justify-content: center;
+    gap: var(--space-m);
+    place-items: center;
 }
 
-.setting {
-    --width : 370px;
-
-    max-width: var(--width);
-    width: 100%;
-    min-width: 200px;
-
-    display: flex;
-    flex-direction: column;
-    gap: var(--space-s);
-    align-content: center;
-
-    padding: var(--space-xl);
-    background: var(--lighter-background-color);
-    border-radius: var(--border-radius);
-}
-.title{
-    font-weight: bold;
-    font-size: var(--step-2);
-}
-.inputContainer {
-    display: flex;
-    flex-direction: row;
-    column-gap: var(--space-xl);
-    width: 100%;
-}
-.input{
-    width: 100%;
-    padding: var(--step-0);
-    border-radius: var(--border-radius);
-    border: 1px solid var(--border-color);
-    font-size: var(--step-1);
-}
-
-.input:focus{
-    outline: none;
-    border: 1px solid var(--link-color);
+@media (max-width: 890px) {
+    .container {
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    }
 }
