--- a/src/widget/setting/Setting.module.css
+++ b/src/widget/setting/Setting.module.css
@@ -1,13 +1,19 @@
 .container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(3, 1fr);
     justify-content: center;
     gap: var(--space-m);
-    place-items: center;
+    place-items: self-start;
 }
 
 @media (max-width: 890px) {
     .container {
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    }
+}
+
+@media (max-width: 545px) {
+    .container {
+        place-items: center;
     }
 }
